
New features:
...G...... [ZBX-6040] added support of Windows 8 and Windows Server 2012 for system.uname check (Sasha)
A.F....... [ZBX-1357] updated American English, Brazilian Portuguese, French, Japanese, Latvian, Russian and Turkish translations; thanks to Zabbix translators (Richlv)
.......PS. [ZBX-5920] added prefetching of 2 MB of data for Oracle SQL selects (dimir)

Bug fixes:
..F....... [ZBX-6006] optimized web interface API calls, which requested redundant data (Toms)
A......... [ZBX-5806] fixed template.massadd and template.massremove returning an empty hostids array (Pavels)
...G...... [ZBX-5201] added handling of PerfCounter error PDH_CALC_NEGATIVE_DENOMINATOR (dimir)
A......... [ZBX-6054] fixed host write permissions being required to view screens (dotneft, Pavels)
..F....... [ZBX-6027] fixed global notification messages don't work in fullscreen frontend mode (Toms)
..F....... [ZBX-6037] fixed duplicate frontend messages and changed frontend messages to show last event for 15 triggers instead of last 15 events (Oleg)
A.F....... [ZBX-5900] fixed date validation in services and maintenances, fixed JS calendar and fixed maintenance periods validation (Oleg)
..F....... [ZBX-5835] fixed possible "Undefined index" in Configuration -> Actions screen (Sasha)
A......... [DEV-524] fixed the ability to override LDAP configuration when calling user.login (Pavels)
..F....... [ZBX-5986] fixed page filter to not use remembered group if selected host is not in that group (Toms)
..F....... [ZBX-6013] fixed table layout in Monitoring -> IT services for IE10 (Toms)
A......... [ZBX-5977] removed possibility to add an LLD rule to an application via the API in application and discovery rule (Oleg)
....I..... [ZBX-5938] removed orphaned trigger from default data set (Alexei)
.D........ [ZBXNEXT-894] fixed generate_events comment to say that events are generated after maintenance if trigger changed its state during the maintenance at all (Richlv)